Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- #2013: regexp constraint on String Widget
- #1961: rendering for email messages
Bug fixes
~~~~~~~~~
- #1998: indirect acess to *File titles
- #1994: a hook for flexible widget creation
- #1980: CPSBooleanField does not work on LDAP with standard RFC 2252 syntax
- #1160: Add support for TinyMCE, a Javascript HTML WYSIWYG editor
- #1943: robustness for Subobjects Field
- #1939: Dependent fields computation crash on Tramline files
- #1974: Make vocabularies and vocabulary entries be better sorted
- Fixed Image Widget resizing wording
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 